--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,11 @@
 
             <!-- Commons Libraries -->
             <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>3.3.2</version>
+            </dependency>
+            <dependency>
                 <groupId>commons-validator</groupId>
                 <artifactId>commons-validator</artifactId>
                 <version>1.3.1</version>
