--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
         <httpclient.version>4.4</httpclient.version>
         <servlet.version>2.4</servlet.version>
         <jsp.version>2.0</jsp.version>
+        <jackson.version>2.5.2</jackson.version>
     </properties>
     <modules>
         <module>rsite-api</module>
