--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
         <servlet.version>2.4</servlet.version>
         <jsp.version>2.0</jsp.version>
         <jackson.version>2.5.2</jackson.version>
+        <amqp.client.version>3.4.3</amqp.client.version>
     </properties>
     <modules>
         <module>rsite-api</module>
@@ -280,6 +281,12 @@
                 <groupId>org.apache.zookeeper</groupId>
                 <artifactId>zookeeper</artifactId>
                 <version>3.4.6</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.rabbitmq</groupId>
+                <artifactId>amqp-client</artifactId>
+                <version>${amqp.client.version}</version>
             </dependency>
 
             <!-- logger -->
