--- a/pom.xml
+++ b/pom.xml
@@ -105,12 +105,15 @@
         </plugins>
         <resources>
             <resource>
-                <filtering>true</filtering>
                 <directory>${basedir}/src/main/resources</directory>
+                <excludes>
+                    <exclude>test/*</exclude>
+                    <exclude>production/*</exclude>
+                    <exclude>development/*</exclude>
+                </excludes>
             </resource>
             <resource>
-                <filtering>true</filtering>
-                <directory>${basedir}/src/main/filters/${env}</directory>
+                <directory>${basedir}/src/main/resources/${profiles.env}</directory>
             </resource>
         </resources>
     </build>
@@ -122,19 +125,19 @@
                 <activeByDefault>true</activeByDefault>
             </activation>
             <properties>
-                <env>dev</env>
+                <profiles.env>dev</profiles.env>
             </properties>
         </profile>
         <profile>
             <id>uat</id>
             <properties>
-                <env>uat</env>
+                <profiles.env>uat</profiles.env>
             </properties>
         </profile>
         <profile>
             <id>pro</id>
             <properties>
-                <env>pro</env>
+                <profiles.env>pro</profiles.env>
             </properties>
         </profile>
     </profiles>
