--- a/pom.xml
+++ b/pom.xml
@@ -41,10 +41,11 @@
         <jersey.version>1.17.1</jersey.version>
         <hibernate.version>4.3.11.Final</hibernate.version>
         <httpclient.version>4.4</httpclient.version>
-        <servlet.version>2.4</servlet.version>
+        <servlet.version>2.5</servlet.version>
         <jsp.version>2.0</jsp.version>
         <jackson.version>2.5.2</jackson.version>
         <amqp.client.version>3.4.3</amqp.client.version>
+        <aspectj.version>1.8.2</aspectj.version>
     </properties>
     <modules>
         <module>rsite-api</module>
@@ -276,6 +277,26 @@
                 <groupId>org.springframework.data</groupId>
                 <artifactId>spring-data-mongodb</artifactId>
                 <version>${spring.mongo.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-aop</artifactId>
+                <version>${spring.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.aspectj</groupId>
+                <artifactId>aspectjweaver</artifactId>
+                <version>${aspectj.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.aspectj</groupId>
+                <artifactId>aspectjrt</artifactId>
+                <version>${aspectj.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>cglib</groupId>
+                <artifactId>cglib</artifactId>
+                <version>2.2.2</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework.data</groupId>
