--- a/pom.xml
+++ b/pom.xml
@@ -395,6 +395,12 @@
                 <version>${amqp.client.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>com.googlecode.xmemcached</groupId>
+                <artifactId>xmemcached</artifactId>
+                <version>2.0.0</version>
+            </dependency>
+
             <!-- logger -->
             <dependency>
                 <groupId>org.slf4j</groupId>
