--- a/pom.xml
+++ b/pom.xml
@@ -456,6 +456,12 @@
             </dependency>
             <dependency>
                 <groupId>javax.servlet</groupId>
+                <artifactId>javax.servlet-api</artifactId>
+                <version>3.1.0</version>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>javax.servlet</groupId>
                 <artifactId>jsp-api</artifactId>
                 <version>${jsp.version}</version>
                 <scope>provided</scope>
