update config files.

--- a/rsite-admin/src/main/resources/globals.properties
+++ b/rsite-admin/src/main/resources/globals.properties
@@ -17,3 +17,7 @@ redis.maxIdle=300
 redis.maxWait=3000
 # 在borrow一个jedis实例时，是否提前进行validate操作；如果为true，则得到的jedis实例均是可用的
 redis.testOnBorrow=true
+
+# MC
+# server IP and port
+memcached.url=localhost:11211
