--- a/rsite-admin/src/main/resources/globals.properties
+++ b/rsite-admin/src/main/resources/globals.properties
@@ -21,3 +21,18 @@ redis.testOnBorrow=true
 # MC
 # server IP and port
 memcached.url=localhost:11211
+
+
+jdbc.driver_class=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://localhost:3306/dbName?useUnicode=true&amp;characterEncoding=UTF-8&amp;autoReconnect=true&allowMultiQueries=true
+jdbc.username=root
+jdbc.password=password
+
+jdbc.initialPoolSize=10
+jdbc.minPoolSize=10
+jdbc.maxPoolSize=30
+jdbc.maxIdleTime=60
+jdbc.acquireIncrement=10
+jdbc.idleConnectionTestPeriod=0
+jdbc.acquireRetryAttempts=30
+jdbc.breakAfterAcquireFailure=false
