--- a/kza-async-service/pom.xml
+++ b/kza-async-service/pom.xml
@@ -19,6 +19,10 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.kza</groupId>
+            <artifactId>r-common</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.quartz-scheduler</groupId>
             <artifactId>quartz</artifactId>
         </dependency>
