--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,7 @@
         <jackson.version>2.5.2</jackson.version>
         <amqp.client.version>3.4.3</amqp.client.version>
         <aspectj.version>1.8.2</aspectj.version>
+        <mysql.connector.version>5.1.30</mysql.connector.version>
     </properties>
     <modules>
         <module>rsite-api</module>
@@ -362,7 +363,7 @@
             <dependency>
                 <groupId>org.quartz-scheduler</groupId>
                 <artifactId>quartz</artifactId>
-                <version>2.2.0</version>
+                <version>2.2.2</version>
             </dependency>
 
             <dependency>
@@ -420,6 +421,18 @@
                 <groupId>com.googlecode.xmemcached</groupId>
                 <artifactId>xmemcached</artifactId>
                 <version>2.0.0</version>
+            </dependency>
+
+            <dependency>
+                <groupId>mysql</groupId>
+                <artifactId>mysql-connector-java</artifactId>
+                <version>${mysql.connector.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.mchange</groupId>
+                <artifactId>c3p0</artifactId>
+                <version>0.9.2.1</version>
             </dependency>
 
             <!-- logger -->
