connection pool config

--- a/rcommon/pom.xml
+++ b/rcommon/pom.xml
@@ -147,7 +147,7 @@
         </dependency>
 
         <dependency>
-            <groupId>com.mchange</groupId>
+            <groupId>c3p0</groupId>
             <artifactId>c3p0</artifactId>
             <optional>true</optional>
         </dependency>
