--- a/kza-async-service/pom.xml
+++ b/kza-async-service/pom.xml
@@ -27,6 +27,10 @@
             <artifactId>quartz</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.quartz-scheduler</groupId>
+            <artifactId>quartz-jobs</artifactId>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
