--- a/kza-async-service/src/main/resources/quartz.properties
+++ b/kza-async-service/src/main/resources/quartz.properties
@@ -1,32 +1,76 @@
-## Using Spring datasource in quartzJobsConfig.xml
-## Spring uses LocalDataSourceJobStore extension of JobStoreCMT
-#org.quartz.jobStore.useProperties=true
-#org.quartz.jobStore.tablePrefix=QRTZ_
-#org.quartz.jobStore.isClustered=true
-## 10 mins
-#org.quartz.jobStore.clusterCheckinInterval=600000
-#org.quartz.scheduler.skipUpdateCheck=true
-#
-## Change this to match your DB vendor
+#============================================================================
+# Configure Main Scheduler Properties
+#============================================================================
+
+org.quartz.scheduler.instanceName: TestScheduler
+org.quartz.scheduler.instanceId: instance_one
+
+org.quartz.scheduler.skipUpdateCheck: true
+
+#============================================================================
+# Configure ThreadPool
+#============================================================================
+
+org.quartz.threadPool.class: org.quartz.simpl.SimpleThreadPool
+org.quartz.threadPool.threadCount: 5
+org.quartz.threadPool.threadPriority: 5
+
+#============================================================================
+# Configure JobStore
+#============================================================================
+
+org.quartz.jobStore.misfireThreshold: 60000
+
+org.quartz.jobStore.class=org.quartz.impl.jdbcjobstore.JobStoreTX
+org.quartz.jobStore.driverDelegateClass=org.quartz.impl.jdbcjobstore.StdJDBCDelegate
+org.quartz.jobStore.useProperties=false
+org.quartz.jobStore.dataSource=myDS
+org.quartz.jobStore.tablePrefix=QRTZ_
+org.quartz.jobStore.isClustered=true
+
+#============================================================================
+# Other Example Delegates
+#============================================================================
+#org.quartz.jobStore.driverDelegateClass=org.quartz.impl.jdbcjobstore.DB2v6Delegate
+#org.quartz.jobStore.driverDelegateClass=org.quartz.impl.jdbcjobstore.DB2v7Delegate
+#org.quartz.jobStore.driverDelegateClass=org.quartz.impl.jdbcjobstore.DriverDelegate
+#org.quartz.jobStore.driverDelegateClass=org.quartz.impl.jdbcjobstore.HSQLDBDelegate
+#org.quartz.jobStore.driverDelegateClass=org.quartz.impl.jdbcjobstore.MSSQLDelegate
+#org.quartz.jobStore.driverDelegateClass=org.quartz.impl.jdbcjobstore.PointbaseDelegate
+#org.quartz.jobStore.driverDelegateClass=org.quartz.impl.jdbcjobstore.PostgreSQLDelegate
 #org.quartz.jobStore.driverDelegateClass=org.quartz.impl.jdbcjobstore.StdJDBCDelegate
-## Needed to manage cluster instances
-#org.quartz.scheduler.instanceId=AUTO
-#org.quartz.scheduler.instanceName=MY_JOB_SCHEDULER
-#
-#org.quartz.scheduler.rmi.export=false
-#org.quartz.scheduler.rmi.proxy=false
-#org.quartz.threadPool.class=org.quartz.simpl.SimpleThreadPool
-#org.quartz.threadPool.threadCount=10
-#org.quartz.threadPool.threadPriority=5
-#org.quartz.threadPool.threadsInheritContextClassLoaderOfInitializingThread=true
-#
-## Configure Plugins
-#org.quartz.plugin.triggHistory.class = \
-#  org.quartz.plugins.history.LoggingTriggerHistoryPlugin
-#org.quartz.plugin.triggHistory.triggerFiredMessage = \
-#  Trigger \{1\}.\{0\} fired job \{6\}.\{5\} at: \{4, date, HH:mm:ss MM/dd/yyyy}
-#org.quartz.plugin.triggHistory.triggerCompleteMessage = \
-#  Trigger \{1\}.\{0\} completed firing job \{6\}.\{5\} at \{4, date, HH:mm:ss MM/dd/yyyy\}.
+#org.quartz.jobStore.driverDelegateClass=org.quartz.impl.jdbcjobstore.WebLogicDelegate
+#org.quartz.jobStore.driverDelegateClass=org.quartz.impl.jdbcjobstore.oracle.OracleDelegate
+#org.quartz.jobStore.driverDelegateClass=org.quartz.impl.jdbcjobstore.oracle.WebLogicOracleDelegate
+
+#============================================================================
+# Configure Datasources
+#============================================================================
+
+org.quartz.dataSource.myDS.driver: org.postgresql.Driver
+org.quartz.dataSource.myDS.URL: jdbc:postgresql://localhost:5432/quartz
+org.quartz.dataSource.myDS.user: quartz
+org.quartz.dataSource.myDS.password: quartz
+org.quartz.dataSource.myDS.maxConnections: 5
+org.quartz.dataSource.myDS.validationQuery: select 0
+
+#============================================================================
+# Configure Plugins
+#============================================================================
+
+#org.quartz.plugin.shutdownHook.class: org.quartz.plugins.management.ShutdownHookPlugin
+#org.quartz.plugin.shutdownHook.cleanShutdown: true
+
+
+#org.quartz.plugin.triggHistory.class: org.quartz.plugins.history.LoggingJobHistoryPlugin
+
+
+
+
+
+
+
+
 
 
 #org.quartz.scheduler.instanceName = MyScheduler
@@ -46,34 +90,34 @@
 
 
 
-# Default Properties file for use by StdSchedulerFactory
-# to create a Quartz Scheduler Instance, if a different
-# properties file is not explicitly specified.
-#
-#============================================================================
-# Configure Main Scheduler Properties
-#============================================================================
-org.quartz.scheduler.instanceName = DefaultQuartzScheduler
-org.quartz.scheduler.rmi.export = false
-org.quartz.scheduler.rmi.proxy = false
-org.quartz.scheduler.wrapJobExecutionInUserTransaction = false
-#============================================================================
-# Configure ThreadPool
-#============================================================================
-org.quartz.threadPool.class = org.quartz.simpl.SimpleThreadPool
-org.quartz.threadPool.threadCount = 10
-org.quartz.threadPool.threadPriority = 5
-org.quartz.threadPool.threadsInheritContextClassLoaderOfInitializingThread = true
-#============================================================================
-# Configure JobStore
-#============================================================================
-#org.quartz.scheduler.classLoadHelper.class=org.quartz.simpl.CascadingClassLoadHelper
-org.quartz.jobStore.misfireThreshold = 60000
-org.quartz.jobStore.useProperties = true
-org.quartz.jobStore.class = org.quartz.impl.jdbcjobstore.JobStoreTX
-org.quartz.jobStore.driverDelegateClass = org.quartz.impl.jdbcjobstore.StdJDBCDelegate
-#havent cluster spring
-#org.quartz.jobStore.dataSource = myDS
-org.quartz.jobStore.tablePrefix = qrtz_
-org.quartz.jobStore.isClustered = false
-org.quartz.jobStore.maxMisfiresToHandleAtATime=1
+## Default Properties file for use by StdSchedulerFactory
+## to create a Quartz Scheduler Instance, if a different
+## properties file is not explicitly specified.
+##
+##============================================================================
+## Configure Main Scheduler Properties
+##============================================================================
+#org.quartz.scheduler.instanceName = DefaultQuartzScheduler
+#org.quartz.scheduler.rmi.export = false
+#org.quartz.scheduler.rmi.proxy = false
+#org.quartz.scheduler.wrapJobExecutionInUserTransaction = false
+##============================================================================
+## Configure ThreadPool
+##============================================================================
+#org.quartz.threadPool.class = org.quartz.simpl.SimpleThreadPool
+#org.quartz.threadPool.threadCount = 10
+#org.quartz.threadPool.threadPriority = 5
+#org.quartz.threadPool.threadsInheritContextClassLoaderOfInitializingThread = true
+##============================================================================
+## Configure JobStore
+##============================================================================
+##org.quartz.scheduler.classLoadHelper.class=org.quartz.simpl.CascadingClassLoadHelper
+#org.quartz.jobStore.misfireThreshold = 60000
+#org.quartz.jobStore.useProperties = true
+#org.quartz.jobStore.class = org.quartz.impl.jdbcjobstore.JobStoreTX
+#org.quartz.jobStore.driverDelegateClass = org.quartz.impl.jdbcjobstore.StdJDBCDelegate
+##havent cluster spring
+##org.quartz.jobStore.dataSource = myDS
+#org.quartz.jobStore.tablePrefix = qrtz_
+#org.quartz.jobStore.isClustered = false
+#org.quartz.jobStore.maxMisfiresToHandleAtATime=1
