--- a/pom.xml
+++ b/pom.xml
@@ -365,6 +365,11 @@
                 <artifactId>quartz</artifactId>
                 <version>2.2.2</version>
             </dependency>
+            <dependency>
+                <groupId>org.quartz-scheduler</groupId>
+                <artifactId>quartz-jobs</artifactId>
+                <version>2.2.2</version>
+            </dependency>
 
             <dependency>
                 <groupId>org.apache.httpcomponents</groupId>
@@ -430,9 +435,8 @@
             </dependency>
 
             <dependency>
-                <groupId>com.mchange</groupId>
+                <groupId>c3p0</groupId>
                 <artifactId>c3p0</artifactId>
-                <version>0.9.2.1</version>
             </dependency>
 
             <!-- logger -->
