update quartz confing

--- a/pom.xml
+++ b/pom.xml
@@ -437,6 +437,7 @@
             <dependency>
                 <groupId>c3p0</groupId>
                 <artifactId>c3p0</artifactId>
+                <version>0.9.1.1</version>
             </dependency>
 
             <!-- logger -->
